<resources>
    <string name="app_name">Redcherry</string>

    <!--
    <string name="sender_id">181528247517</string>
-->
    <!--
    <string name="sender_id">193002639791</string>
-->

    <string name="sender_id">193002639791</string>


    <!-- <string name="google_api_key">AIzaSyBVj9pTEvQit6F3RIQoPYa9uKtTFMY-MaU</string>-->
    <!--
    <string name="google_api_key">AIzaSyB9EYiA5p5ScVZZXP2DO4TEHs8Rpq_QvaQ</string>
-->

    <!--
    <string name="google_api_key">AIzaSyB0PXBIqyrjaaV_duN581PwNbHH8m6cTNw</string>
-->

    <string name="google_api_key">AIzaSyDOmH8oJOhbYgiGdOMS_Q1qOPjt0EjhB7U</string>


    <string name="preferences">Redcherry</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="network_not_available">Network Not Available.</string>

    <string name="facebook"><b>f</b> Sign in with facebook</string>


    <string name="create_account">Create an account</string>

    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="address">Address</string>
    <string name="title_activity_vechicle_service">VehicleServiceActivity</string>
    <string name="title_activity_service_center">Service Center</string>
    <string name="title_activity_service_center_detail">Service Center</string>
    <string name="title_activity_booking_service">BookingService</string>
    <string name="title_activity_booking_invoice">Booking Invoice</string>
    <string name="invoice">Invoice</string>
    <string name="ok">OK</string>
    <string name="download_pdf">DOWNLOAD PDF</string>
    <string name="title_activity_add_vechicle">Add Vehicle</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="car">Car</string>
    <string name="bike">Bike</string>
    <string name="title_activity_cancel_booking">CancelBookingActivity</string>
    <string name="service">Service</string>
    <string name="carwash">Car Wash</string>
    <string name="title_activity_car_wash_home">CarWashHomeActivity</string>
    <string name="door_step_wash">DOOR STEP CAR WASH</string>
    <string name="work_spa"><![CDATA[WASH STATION & SPA]]></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_doorstep_service_center">Service Center</string>
    <string name="title_activity_doorstep_car_wash_service_center_detail">
        Service Center
    </string>
    <string name="title_activity_work_station_service_center">Service Center
    </string>
    <string name="title_activity_car_wash_booking">Service Center</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="take_photo">Take Photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth (Optional)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_auto_store">AutoStoreActivity</string>
    <string name="title_activity_roadside_assistance">RoadsideAssistanceActivity</string>
    <string name="delete">Delete</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_notification_detail">Notification</string>

    <string name="title_activity_car_wash_invoice_activty">CarWash Invoice</string>
    <string name="title_activity_one_tap">OneTapActivity</string>
    <string name="description">The price mentioned above is for General Service and Labour cost, water wash. Cost towards any extra repair jobs, spares/parts replacement and consumables incurred during service would be intimated and charged additionally. Price mentioned is just for reference.</string>


    <!--<string name="facebook_app_id">620857684747275</string>-->
    <!--<string name="fb_login_protocol_scheme">fb620857684747275</string>-->
    <string name="facebook_app_id">628556627324522</string>
    <string name="fb_login_protocol_scheme">fb628556627324522</string>
    <string name="city">Enter City (optional)</string>
    <string name="please_try">There is some network error, Please Try Again</string>
    <string name="add_vech_mess">Please Add your vehicle</string>

    <string name="no_Service_center">CURRENTLY IN MANGALORE CITY, SOON IN OTHER CITIES</string>
    <string name="review_message">Thank you , for your valuable review</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>

    <string name="title_activity_thank_you">ThankYouActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_track_book">TrackBookActivity</string>
    <string name="pay">Pay</string>

</resources>
